--- a/package.json
+++ b/package.json
@@ -9,11 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "create-next-app": "^12.2.5",
+    "dotenv": "^16.0.2",
     "global": "^4.4.0",
     "next": "12.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
+    "react-paginate": "^8.1.3",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.1",
+    "sweetalert2": "^11.4.32"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
